--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,11 @@
 {
-    "name": "kamil/rest-api",
-    "description": "learning rest api in php hehe",
-    "type": "project",
-    "require-dev": {
-        "phpmd/phpmd": "^2.15",
-        "squizlabs/php_codesniffer": "^3.9",
-        "friendsofphp/php-cs-fixer": "^3.52"
-    },
+    "name": "kamsaf/elephantino",
+    "description": "PHP micro web framework created for fun.",
+    "type": "library",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Kamil\\RestApi\\": "src/"
+            "Kamsaf\\Elephantino\\": "src/"
         }
     },
     "authors": [
@@ -17,5 +13,11 @@
             "name": "KamSaf",
             "email": "bopaf42@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpmd/phpmd": "^2.15",
+        "squizlabs/php_codesniffer": "^3.9",
+        "friendsofphp/php-cs-fixer": "^3.52"
+    },
+    "require": {}
 }
